docs/0.7/_sources/api/gammapy.maps.HpxSparseMap.rst.txt
HpxSparseMap
============

.. currentmodule:: gammapy.maps

.. autoclass:: HpxSparseMap
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~HpxSparseMap.data
      ~HpxSparseMap.geom

   .. rubric:: Methods Summary

   .. autosummary::

      ~HpxSparseMap.coadd
      ~HpxSparseMap.create
      ~HpxSparseMap.crop
      ~HpxSparseMap.downsample
      ~HpxSparseMap.fill_by_coord
      ~HpxSparseMap.fill_by_idx
      ~HpxSparseMap.fill_by_pix
      ~HpxSparseMap.from_geom
      ~HpxSparseMap.from_hdu
      ~HpxSparseMap.from_hdu_list
      ~HpxSparseMap.from_hdulist
      ~HpxSparseMap.get_by_coord
      ~HpxSparseMap.get_by_idx
      ~HpxSparseMap.get_by_pix
      ~HpxSparseMap.interp_by_coord
      ~HpxSparseMap.interp_by_pix
      ~HpxSparseMap.iter_by_coord
      ~HpxSparseMap.iter_by_image
      ~HpxSparseMap.iter_by_pix
      ~HpxSparseMap.make_hdu
      ~HpxSparseMap.pad
      ~HpxSparseMap.read
      ~HpxSparseMap.reproject
      ~HpxSparseMap.set_by_coord
      ~HpxSparseMap.set_by_idx
      ~HpxSparseMap.set_by_pix
      ~HpxSparseMap.sum_over_axes
      ~HpxSparseMap.to_hdulist
      ~HpxSparseMap.to_swapped
      ~HpxSparseMap.to_ud_graded
      ~HpxSparseMap.to_wcs
      ~HpxSparseMap.upsample
      ~HpxSparseMap.write

   .. rubric:: Attributes Documentation

   .. autoattribute:: data
   .. autoattribute:: geom

   .. rubric:: Methods Documentation

   .. automethod:: coadd
   .. automethod:: create
   .. automethod:: crop
   .. automethod:: downsample
   .. automethod:: fill_by_coord
   .. automethod:: fill_by_idx
   .. automethod:: fill_by_pix
   .. automethod:: from_geom
   .. automethod:: from_hdu
   .. automethod:: from_hdu_list
   .. automethod:: from_hdulist
   .. automethod:: get_by_coord
   .. automethod:: get_by_idx
   .. automethod:: get_by_pix
   .. automethod:: interp_by_coord
   .. automethod:: interp_by_pix
   .. automethod:: iter_by_coord
   .. automethod:: iter_by_image
   .. automethod:: iter_by_pix
   .. automethod:: make_hdu
   .. automethod:: pad
   .. automethod:: read
   .. automethod:: reproject
   .. automethod:: set_by_coord
   .. automethod:: set_by_idx
   .. automethod:: set_by_pix
   .. automethod:: sum_over_axes
   .. automethod:: to_hdulist
   .. automethod:: to_swapped
   .. automethod:: to_ud_graded
   .. automethod:: to_wcs
   .. automethod:: upsample
   .. automethod:: write
