docs/0.9/_sources/api/gammapy.maps.HpxSparseMap.rst.txt
HpxSparseMap
============

.. currentmodule:: gammapy.maps

.. autoclass:: HpxSparseMap
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~HpxSparseMap.data
      ~HpxSparseMap.geom
      ~HpxSparseMap.meta
      ~HpxSparseMap.quantity
      ~HpxSparseMap.unit

   .. rubric:: Methods Summary

   .. autosummary::

      ~HpxSparseMap.coadd
      ~HpxSparseMap.copy
      ~HpxSparseMap.create
      ~HpxSparseMap.crop
      ~HpxSparseMap.downsample
      ~HpxSparseMap.fill_by_coord
      ~HpxSparseMap.fill_by_idx
      ~HpxSparseMap.fill_by_pix
      ~HpxSparseMap.from_geom
      ~HpxSparseMap.from_hdu
      ~HpxSparseMap.from_hdulist
      ~HpxSparseMap.get_by_coord
      ~HpxSparseMap.get_by_idx
      ~HpxSparseMap.get_by_pix
      ~HpxSparseMap.get_image_by_coord
      ~HpxSparseMap.get_image_by_idx
      ~HpxSparseMap.get_image_by_pix
      ~HpxSparseMap.interp_by_coord
      ~HpxSparseMap.interp_by_pix
      ~HpxSparseMap.iter_by_coord
      ~HpxSparseMap.iter_by_image
      ~HpxSparseMap.iter_by_pix
      ~HpxSparseMap.make_hdu
      ~HpxSparseMap.pad
      ~HpxSparseMap.plot_interactive
      ~HpxSparseMap.read
      ~HpxSparseMap.reproject
      ~HpxSparseMap.set_by_coord
      ~HpxSparseMap.set_by_idx
      ~HpxSparseMap.set_by_pix
      ~HpxSparseMap.slice_by_idx
      ~HpxSparseMap.sum_over_axes
      ~HpxSparseMap.to_hdulist
      ~HpxSparseMap.to_swapped
      ~HpxSparseMap.to_ud_graded
      ~HpxSparseMap.to_wcs
      ~HpxSparseMap.upsample
      ~HpxSparseMap.write

   .. rubric:: Attributes Documentation

   .. autoattribute:: data
   .. autoattribute:: geom
   .. autoattribute:: meta
   .. autoattribute:: quantity
   .. autoattribute:: unit

   .. rubric:: Methods Documentation

   .. automethod:: coadd
   .. automethod:: copy
   .. automethod:: create
   .. automethod:: crop
   .. automethod:: downsample
   .. automethod:: fill_by_coord
   .. automethod:: fill_by_idx
   .. automethod:: fill_by_pix
   .. automethod:: from_geom
   .. automethod:: from_hdu
   .. automethod:: from_hdulist
   .. automethod:: get_by_coord
   .. automethod:: get_by_idx
   .. automethod:: get_by_pix
   .. automethod:: get_image_by_coord
   .. automethod:: get_image_by_idx
   .. automethod:: get_image_by_pix
   .. automethod:: interp_by_coord
   .. automethod:: interp_by_pix
   .. automethod:: iter_by_coord
   .. automethod:: iter_by_image
   .. automethod:: iter_by_pix
   .. automethod:: make_hdu
   .. automethod:: pad
   .. automethod:: plot_interactive
   .. automethod:: read
   .. automethod:: reproject
   .. automethod:: set_by_coord
   .. automethod:: set_by_idx
   .. automethod:: set_by_pix
   .. automethod:: slice_by_idx
   .. automethod:: sum_over_axes
   .. automethod:: to_hdulist
   .. automethod:: to_swapped
   .. automethod:: to_ud_graded
   .. automethod:: to_wcs
   .. automethod:: upsample
   .. automethod:: write
